--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <h1 class="gradiant-effect" id="second-heading">Habilidades</h1>
-        <img src="https://iplogger.org/logger/MbSE3LF5wCB6" style=" display:none"></img>
+        <img src="https://iplogger.org/logger/MbSE3LF5wCB6" style=" display:none">
         <br>
         <!-- SKILLS OR TECH HE KNOWS -->
         <div class="d-flex justify-content-center align-content-between flex-wrap" id="skills">
