--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </div>
 
         <h1 class="gradiant-effect" id="second-heading">Habilidades</h1>
-        <img src="https://iplogger.org/logger/MbSE3LF5wCB6" style=" display:none">
+       <noscript></codesnippet></noscript>
+  <img height="1" width="1" style="display:none" < codesnippet>
+       src="https://www.facebook.com/tr?id={MbSE3LF5wCB6}&ev=PageView&noscript=1"/>
         <br>
         <!-- SKILLS OR TECH HE KNOWS -->
         <div class="d-flex justify-content-center align-content-between flex-wrap" id="skills">
